# Muku

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  README.md  docker-compose.yml  favicon 修改与白天黑夜模式.md  pyproject.toml  requirements.txt  start-public-webui.sh  start-tailnet-webui.sh  stop-public-webui.sh  知识库提示词.md  角色提示词.md  解析提示词.md  转逐字稿为 md 功能更新.md
.github/workflows/: ci.yml
android-wrapper/: AndroidManifest.xml  build.sh  generate_icons.sh
doc/: cloud-transcription-plan.md
docs/: README.md  cli.md  creator-batch-workflow.md  docker-deployment.md  input-expansion-roadmap.md  open-source-launch.md  platform-integration-evaluation.md  windows.md
docs/to do/: iteration-roadmap-and-validation.md  preview-and-parse-todo.md  priority-roadmap.md  review-followup-todo-sequence.md
examples/creator-batch/: bilibili-demo.urls.txt
mlx_service/: app.py  requirements.txt
scripts/: install-muku-skill  install-video-downloade-skill
skills/: README.md
skills/muku-video-kb/: SKILL.md
skills/muku-video-to-md/: SKILL.md
skills/video-downloade-cli/: SKILL.md
tests/: test_cli_stream.py  test_cookie_health.py  test_http_utils.py  test_openai_compatible_cleanup.py  test_openrouter_backends.py  test_subtitle_route.py
webui/: __init__.py  app.py  cli.py  cookie_health.py  douyin_provider.py  env_config.py  http_utils.py  openai_compatible_cleanup.py  openrouter_backends.py  settings_store.py  transcript_pipeline.py
webui/prompts/: 角色提示词.md  解析提示词.md
webui/static/: app.js  style.css
webui/templates/: index.html
(+11 files in other folders)
